@@ -1,3 +1,4 @@
 export const INCREASE = 'INCREASE';
 export const DECREASE = 'DECREASE';
+export const MULTIPLICATION = 'MULTIPLICATION';
 export const RESET = 'RESET';
